update building_model with feature engineering, feature hashes and training, testing, performance measurement

--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -23,12 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "from datetime import datetime\n",
+    "from math import log, exp, sqrt\n",
+    "import pickle\n",
+    "import sys\n",
+    "import random\n",
+    "import math\n",
+    "import re"
    ]
   },
   {
@@ -212,13 +220,6 @@
     "\n",
     "test[train_col_order].to_csv('TestData2.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
